objects/Chatter_Message__c.object
<CustomObject>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>Chatter_Message__c</referenceTo>
        <relationshipLabel>Chatter Messages</relationshipLabel>
        <relationshipName>Chatter_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recipients__c</fullName>
        <label>Recipients</label>
        <summaryForeignKey>Chatter_Message_Recipient__c.Chatter_Message__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Chatter Message</label>
    <nameField>
        <displayFormat>CM-{0000}</displayFormat>
        <label>Chatter Message ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chatter Messages</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>